// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`URL Components Snapshots > UrlDetailsModal > should render when closed 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render when open 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/abc123" short-code="abc123" original-url="https://example.com" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with different shortCode formats 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: ABC-123_test"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="ABC-123_test" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/ABC-123_test" short-code="ABC-123_test" original-url="https://example.com" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with long URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: abc123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="abc123" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/long123" short-code="abc123" original-url="https://very-long-example-url-that-should-be-displayed-properly.com/with/many/path/segments" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with minimal props 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: min"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="min" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/min" short-code="min" original-url="https://a.co" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;

exports[`URL Components Snapshots > UrlDetailsModal > should render with special characters in URLs 1`] = `
"<dialog data-v-dd4104c0="" class="modal-dialog">
  <div data-v-dd4104c0="" class="modal-content">
    <modalheader data-v-dd4104c0="" title="URL Details: special123"></modalheader>
    <div data-v-dd4104c0="" class="modal-body">
      <qrcodesection data-v-dd4104c0="" short-code="special123" qr-code-url=""></qrcodesection>
      <!--v-if-->
      <!--v-if-->
      <urleditform data-v-dd4104c0="" short-url="http://localhost:3000/special123" short-code="special123" original-url="https://example.com/path?param=value&amp;other=test#section" loading="false"></urleditform>
    </div>
  </div>
</dialog>"
`;
